--- a/OMNI_Compiler.ipynb
+++ b/OMNI_Compiler.ipynb
@@ -7,7 +7,7 @@
     "## This is developed by Tesfay and guided by his supervisors from NASA and UNIVAP(Brazil)\n",
     "\n",
     "### This is an interactive python code to download and to visualize any high resolution OMNIWEB data\n",
-    "#### This code is very attractive and encrypted to prevent unnecessary making busy for OMNIWEB sites, therefore feel free to reach us via our linkedin accountanad our E-mail:   tesfayphysics@gmail.com"
+    "#### This code is designed to be more interactive and easy to use for analyzing space weather data from the OMNIWEB website. However, it has been encrypted and requires a password to prevent unnecessary execution that could lead to redundant data downloads. For further assistance or inquiries, feel free to reach us via our LinkedIn account or email at tesfayphysics@gmail.com."
    ]
   },
   {
